--- a/DAS Web Project/index.html
+++ b/DAS Web Project/index.html
@@ -37,17 +37,32 @@ Your submission is due Monday, October 26th at 10:00 AM.
     <div id="vltTitle">
     <h1>VLT AUTO</h1>
     </div> 
+
+    <div id="address">
+    <address>
+        4859 Motor Drive
+        <br>
+        Des Moines, IA 50310
+    </address>
+    </div>
+
 <main>
     <nav>
         <ul>
             <li><a href="index.html"> Home </a></li>
-            <li><a href="selection.html"> Selection </a></li>
-            <li><a>Contact Us</a></li>
+            <li><a href="carSelection.html"> Cars For Sale </a></li>
+            <li><a href="contact.html"> Contact </a></li>
         </ul>
     </nav>
+    <!--Welcome to VLT AUTO, details on location etc-->
+    
+    <div class= "sideBySide">
+        <img src="images/carLot.jpg">
+        <h3>About Us</h3>
+        <p>Dapibus dictum lacinia ipsum tempor scelerisque lobortis, id ante morbi sit. Dis nulla dui inceptos, habitant eu. Taciti et dapibus eleifend, augue ullamcorper laoreet arcu felis platea! Erat curae; tellus dictumst ipsum sociosqu. Velit nulla fringilla vehicula pellentesque curabitur ultrices molestie habitant. Elit ipsum dictum ut laoreet quam ornare dapibus arcu. Aliquet!</p>
+    </div>
+
 </main>
-
-
 </body>
 
 
