--- a/DAS Web Project/index.html
+++ b/DAS Web Project/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <!--
 The goal for this task is to build a website which:
-Displays a welcome page
+xxxDisplays a welcome page
 
-Contains a form that intakes at least 2 numbers, completes a calculation with them (your choosing) and returns a result
+xxxContains a form that intakes at least 2 numbers, completes a calculation with them (your choosing) and returns a result
 
-Utilize Lorem Ipsum of your choice for fake text content.
+xxxUtilize Lorem Ipsum of your choice for fake text content.
 
 508 Compliance and WCAG 2.1 Standards are important to consider.
 
@@ -38,12 +38,13 @@ Your submission is due Monday, October 26th at 10:00 AM.
     <h1>VLT AUTO</h1>
     </div> 
 
+    <!--h2 for WCAG-->
     <div id="address">
-    <address>
+    <h2><address>
         4859 Motor Drive
         <br>
         Des Moines, IA 50310
-    </address>
+    </address></h2>
     </div>
 
 <main>
@@ -57,7 +58,7 @@ Your submission is due Monday, October 26th at 10:00 AM.
     <!--Welcome to VLT AUTO, details on location etc-->
     
     <div class= "sideBySide">
-        <img src="images/carLot.jpg">
+        <img src="images/carLot.jpg" alt="Our location has an inventory of over 50 makes and models.">
         <h3>About Us</h3>
         <p>Dapibus dictum lacinia ipsum tempor scelerisque lobortis, id ante morbi sit. Dis nulla dui inceptos, habitant eu. Taciti et dapibus eleifend, augue ullamcorper laoreet arcu felis platea! Erat curae; tellus dictumst ipsum sociosqu. Velit nulla fringilla vehicula pellentesque curabitur ultrices molestie habitant. Elit ipsum dictum ut laoreet quam ornare dapibus arcu. Aliquet!</p>
     </div>
