--- a/DAS Web Project/index.html
+++ b/DAS Web Project/index.html
@@ -1,50 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--
-The goal for this task is to build a website which:
-xxxDisplays a welcome page
 
-xxxContains a form that intakes at least 2 numbers, completes a calculation with them (your choosing) and returns a result
-
-xxxUtilize Lorem Ipsum of your choice for fake text content.
-
-508 Compliance and WCAG 2.1 Standards are important to consider.
-
-Extra credit will be given for implementing authentication of your choice
-
--------------------------- 
-
-Several things to keep in mind as you approach this exercise:
-
-The code should be as Production Ready as you can make it.
-
-You will need to share your code in a Git repository so make sure it is publicly accessible.
-
-Your site and code will be graded on code content, supportability, structure, and WCAG rating.
-
-Your submission is due Monday, October 26th at 10:00 AM.
-
--->
 <head>
     <title> VLT AUTO DSM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="VltAuto.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Find the best used cars in the Des Moines Metro Area. Every vehicle comes with 21-point inspection by our team of ASE Certified Technicians.">
+    <script src="js.cookie.js"></script>
 </head>
 
 <body>
     <div id="vltTitle">
-    <h1>VLT AUTO</h1>
+        <h1>VLT AUTO</h1>
     </div> 
 
     <!--h2 for WCAG-->
     <div id="address">
-    <h2><address>
-        4859 Motor Drive
-        <br>
-        Des Moines, IA 50310
-    </address></h2>
+        <h2><address>
+            4859 Motor Drive
+            <br>
+            Des Moines, IA 50310
+        </address></h2>
     </div>
 
 <main>
@@ -56,16 +33,21 @@ Your submission is due Monday, October 26th at 10:00 AM.
         </ul>
     </nav>
     <!--Welcome to VLT AUTO, details on location etc-->
-    
     <div class= "sideBySide">
         <img src="images/carLot.jpg" alt="Our location has an inventory of over 50 makes and models.">
         <h3>About Us</h3>
         <p>Dapibus dictum lacinia ipsum tempor scelerisque lobortis, id ante morbi sit. Dis nulla dui inceptos, habitant eu. Taciti et dapibus eleifend, augue ullamcorper laoreet arcu felis platea! Erat curae; tellus dictumst ipsum sociosqu. Velit nulla fringilla vehicula pellentesque curabitur ultrices molestie habitant. Elit ipsum dictum ut laoreet quam ornare dapibus arcu. Aliquet!</p>
     </div>
+    <!--Displays Welcome Back Alert-->
+    <script>
+        if(!Cookies.get("welcome") && Cookies.get("name")){
+            alert("Welcome back "+ Cookies.get("name") + ".");
+            Cookies.set("welcome", true);
+            console.log(Cookies.get("welcome"));
+        }
+    </script>
 
 </main>
 </body>
-
-
 <!--End-->
 </html>
